--- a/styles/stack.css
+++ b/styles/stack.css
@@ -1,12 +1,9 @@
 body.stack {
-    font-family: "Montserrat", sans-serif;
     background-color: #f2f4f6;
     color: #080808;
-    font-size: 18px;
   }
   
   .visualization {
-    font-family: "Josefin Sans", sans-serif;
     text-align: center;
     margin-top: 20px;
   }
@@ -14,28 +11,14 @@ body.stack {
   #visCanvas {
     display: block;
     margin: 0 auto;
-    width: 500%;
-    height: 400px;
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-
-  canvas {
+    width: 500px;
+    height: 300px;
+    background-color: #eef2f7;
     border: 2px solid #6c9cf3;
-    background-color: #eef2f7d8;
-    display: block;
-    margin: 0 auto;
     border-radius: 8px;
   }
   
-  .controls {
-    margin-top: 15px;
-  }
-  
-  button {
-    margin-bottom: 16px;
-    font-family: "Josefin Sans", sans-serif;
+  .controls button {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #6c9cf3;
@@ -43,11 +26,11 @@ body.stack {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin: 0 5px;
+    margin: 5px;
     transition: background-color 0.3s;
   }
   
-  button:hover {
+  .controls button:hover {
     background-color: #9eb7f2;
   }
   
