--- a/styles/ds.css
+++ b/styles/ds.css
@@ -74,3 +74,42 @@ canvas {
 .controls button:hover {
   background-color: #9eb7f2;
 }
+
+.pros-cons {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem; 
+}
+
+.advantages, .disadvantages {
+  flex: 1; 
+}
+
+.advantages {
+  color: green;
+}
+
+.disadvantages {
+  color: red;
+}
+
+.implementations {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem; /* רווח בין העיגולים */
+  margin-top: 1rem;
+}
+
+.implementation-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  background: #d0ebff;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: bold;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
