--- a/styles/ds.css
+++ b/styles/ds.css
@@ -133,3 +133,21 @@ canvas {
 .node__leaf {
   fill: #90ee90; /* Leaf nodes */
 }
+
+.highlight-bar {
+  position: relative;
+  display: inline-block;
+}
+
+.highlight-bar::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(90deg, #c5c5cd, #9acbff); /* מעבר צבעים */
+  border-radius: 3px;
+  z-index: -1;
+}
