--- a/styles/ds.css
+++ b/styles/ds.css
@@ -135,8 +135,8 @@ canvas {
 }
 
 .highlight {
-  background-color: #ffeaa7; /* צבע המרקר */
-  padding: 0 4px; /* ריווח פנימי קטן */
-  border-radius: 3px; /* פינות מעוגלות */
-  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.1); /* אפקט עומק קל */
+  background-color: #8ff0fb; 
+  padding: 0 4px; 
+  border-radius: 3px; 
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.1); 
 }
