--- a/styles/ds.css
+++ b/styles/ds.css
@@ -137,13 +137,15 @@ canvas {
 
 .highlight_strong {
   background-color: #8ff0fb; 
+  font-weight: bold;
   padding: 0 4px; 
   border-radius: 3px; 
   box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.1); 
 }
 
 .highlight_low {
-  background-color: #d4eded; 
+  background-color: #c6f6f6; 
+  font-weight: bold;
   padding: 0 4px; 
   border-radius: 3px; 
   box-shadow: inset 0 -2px 0 rgba(201, 232, 235, 0.805); 
