--- a/styles/ds.css
+++ b/styles/ds.css
@@ -25,7 +25,7 @@ table {
   width: 80%;
   border-collapse: collapse;
   margin: 1rem 0;
-  background: #d0dcf3;
+  background: #c8c8c9;
 }
 
 table th, table td {
@@ -138,7 +138,6 @@ canvas {
 
 .highlight_strong {
   background-color: #8ff0fb; 
-  font-weight: bold;
   padding: 0 4px; 
   border-radius: 3px; 
   box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.1); 
@@ -146,7 +145,6 @@ canvas {
 
 .highlight_low {
   background-color: #c6f6f6; 
-  font-weight: bold;
   padding: 0 4px; 
   border-radius: 3px; 
   box-shadow: inset 0 -2px 0 rgba(201, 232, 235, 0.805); 
