--- a/styles/ds.css
+++ b/styles/ds.css
@@ -25,7 +25,7 @@ table {
   width: 80%;
   border-collapse: collapse;
   margin: 1rem 0;
-  background: #c8c8c9;
+  background: #e4e4e6;
 }
 
 table th, table td {
