--- a/styles/ds.css
+++ b/styles/ds.css
@@ -176,8 +176,8 @@ canvas {
 }
 
 .note {
-  font-size: 0.9rem;
+  font-size: 1.7rem;
   color: #555;
   margin-top: 0.5rem;
-  text-align: center;
+  text-align: left;
 }
