--- a/styles/ds.css
+++ b/styles/ds.css
@@ -234,10 +234,10 @@ pre code {
 }
 
 .code-editor {
-  width: 100%;
-  height: 150px;
+  width: 86%;
+  height: 300px;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 14px;
+  font-size: 15px;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 1rem;
@@ -248,7 +248,7 @@ pre code {
 
 #output {
   background-color: #eef2f7;
-  border: 1px solid #ddd;
+  border: 1px solid #b8e9dc;
   border-radius: 8px;
   padding: 1rem;
   white-space: pre-wrap;
