--- a/styles/ds.css
+++ b/styles/ds.css
@@ -219,14 +219,15 @@ pre code {
 }
 
 .copy-button {
+  font-family: 'Montserrat', sans-serif;
   background-color: #6c9cf3;
   color: #fff;
   border: none;
   border-radius: 4px;
   padding: 0.5rem 1rem;
   cursor: pointer;
-  font-size: 14px;
-  margin-top: 0.5rem;
+  font-size: 16px;
+  margin-top: 1rem;
 }
 
 .copy-button:hover {
@@ -235,7 +236,7 @@ pre code {
 
 .code-editor {
   width: 86%;
-  height: 300px;
+  height: 200px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 15px;
   border: 1px solid #ddd;
